--- a/code/LSPI/LSPI.vcxproj.filters
+++ b/code/LSPI/LSPI.vcxproj.filters
@@ -29,6 +29,9 @@
     </CudaCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Agent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -38,10 +41,16 @@
     <ClInclude Include="sample.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NoopAgent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Matrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LspiAgent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CleverAgent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="blas.h">
@@ -56,6 +65,9 @@
     <ClInclude Include="constants.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Pendulum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="cblas.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -68,6 +80,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Pendulum.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
